# TypeThrill

./: CMakeLists.txt  Globals.cpp  Globals.h  README.md  Settings.cpp  Settings.h  main.cpp  settings.txt
Game/: Game.cpp  Game.h  GameInterface.cpp  GameInterface.h  GameStatistics.cpp  GameStatistics.h  Highscores.cpp  Highscores.h  WordSpawner.cpp  WordSpawner.h
Misc/: PosRatio.h
ResourceManagers/: FontManager.cpp  FontManager.h  GameSaveManager.cpp  GameSaveManager.h  TextureManager.cpp  TextureManager.h
Resources/GameFiles/: Template.txt  highscores.txt  save1.txt  save2.txt  save3.txt
Resources/Locales/: custom.txt  english.txt  polish.txt
Translator/: WordLanguages.cpp  WordLanguages.h  WordLocales.cpp  WordLocales.h
UI/: Button.cpp  Button.h  ButtonFactory.cpp  ButtonFactory.h  Checkbox.cpp  Checkbox.h  CheckboxFactory.cpp  CheckboxFactory.h  ComboBox.cpp  ComboBox.h  DynamicTextLabel.cpp  DynamicTextLabel.h  Panel.cpp  Panel.h  TextField.cpp  TextField.h  TextLabel.cpp  TextLabel.h  UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIElementFactory.cpp  UIElementFactory.h  Word.cpp  Word.h
